--- a/src/ProductManagement.Domain.Shared/Localization/ProductManagement/en.json
+++ b/src/ProductManagement.Domain.Shared/Localization/ProductManagement/en.json
@@ -15,6 +15,8 @@
     "NewProduct": "New Product",
     "Category": "Category",
     "IsFreeCargo": "Free Cargo",
-    "ReleaseDate": "Release Date"
+    "ReleaseDate": "Release Date",
+    "ProductDeletionConfirmationMessage": "Are you sure you want to delete this item: {0}?",
+    "SuccessfullyDeleted": "Item have been deleted successfully!"
   }
 }
